--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "validate": "node scripts/validate.js",
     "build": "vite build",
     "preview": "vite preview"
   },
