--- a/.github/workflows/apply-patch.yml
+++ b/.github/workflows/apply-patch.yml
@@ -5,7 +5,15 @@ on:
     inputs:
       patch:
         description: "Wklej treść łatki (unified diff: diff --git / --- / +++)"
-        required: true
+        required: false
+        type: string
+      patch_b64:
+        description: "ALTERNATYWA: ta sama łatka, ale zakodowana base64"
+        required: false
+        type: string
+      patch_url:
+        description: "ALTERNATYWA: URL do surowego pliku z łatką (RAW)"
+        required: false
         type: string
 
 permissions:
@@ -15,7 +23,6 @@ permissions:
 jobs:
   apply:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout (pełna historia)
         uses: actions/checkout@v4
@@ -27,46 +34,60 @@ jobs:
           git config user.name "grazynka-bot"
           git config user.email "bot@example.local"
 
-      - name: Zapisz patch do pliku (ENV + printf)
+      - name: Pobierz / zbuduj patch.diff
         shell: bash
         env:
-          PATCH_CONTENT: ${{ github.event.inputs.patch }}
+          PATCH_RAW: ${{ github.event.inputs.patch }}
+          PATCH_B64: ${{ github.event.inputs.patch_b64 }}
+          PATCH_URL: ${{ github.event.inputs.patch_url }}
         run: |
-          set -e
-          printf '%s' "$PATCH_CONTENT" > patch.diff
+          set -euo pipefail
+          if [ -n "${PATCH_URL:-}" ]; then
+            echo "Tryb: URL"
+            curl -fsSL "$PATCH_URL" -o patch.diff
+          elif [ -n "${PATCH_B64:-}" ]; then
+            echo "Tryb: base64"
+            echo "$PATCH_B64" | base64 -d > patch.diff
+          elif [ -n "${PATCH_RAW:-}" ]; then
+            echo "Tryb: RAW tekst"
+            printf '%s' "$PATCH_RAW" > patch.diff
+          else
+            echo "🚫 Nie podano żadnego wejścia (patch/patch_b64/patch_url)."
+            exit 1
+          fi
+
           echo "Patch bytes: $(wc -c < patch.diff)"
           echo "Patch head:"
           sed -n '1,12p' patch.diff || true
-          # weryfikacja, że to wygląda jak unified diff
-          grep -E '^(diff --git|--- |\+\+\+ )' patch.diff >/dev/null || { echo "🚫 To nie wygląda na unified diff (brak nagłówków)."; exit 1; }
-          test -s patch.diff || { echo "🚫 Pusty patch"; exit 1; }
 
-      - name: Utwórz gałąź i spróbuj nałożyć patch (3-way → reject)
+          # sanity: sprawdź, że wygląda jak unified diff
+          if ! grep -Eq '^(diff --git|--- |\+\+\+ )' patch.diff; then
+            echo "🚫 To nie wygląda na unified diff. Upewnij się, że zaczyna się od 'diff --git ...'"
+            exit 1
+          fi
+
+      - name: Nałóż łatkę na nową gałąź (3-way → reject)
         shell: bash
         run: |
           set -euxo pipefail
           BR="grazynka/patch-${GITHUB_RUN_ID}-${GITHUB_RUN_ATTEMPT}"
           git switch -C "$BR"
 
-          # 1) Próba 3-way
           if git apply --3way --whitespace=nowarn patch.diff; then
             echo "✅ git apply --3way OK"
           else
-            echo "⚠️ 3-way failed, próbuję --reject (z plikami .rej)"
-            git apply --reject --whitespace=nowarn patch.diff || { echo "❌ git apply --reject też się wywalił"; exit 1; }
-            # jeśli powstały .rej, przerywamy i prosimy o nową łatkę pod HEAD
+            echo "⚠️ 3-way failed, próbuję --reject"
+            git apply --reject --whitespace=nowarn patch.diff
             if compgen -G "**/*.rej" > /dev/null; then
-              echo "❌ Powstały pliki *.rej (konflikty). Nie robię commita."
-              echo "Lista .rej:"
+              echo "❌ Powstały *.rej (konflikty). Przerywam."
               find . -name '*.rej' -print
               exit 1
             fi
           fi
 
           git add -A
-          # jeżeli nic się nie zmieniło, kończymy z czytelnym komunikatem
           if git diff --staged --quiet; then
-            echo "❌ Nothing to commit — patch nic nie zmienił (albo już był zastosowany)."
+            echo "❌ Nothing to commit — patch nic nie zmienił (albo już zastosowany)."
             exit 1
           fi
           git commit -m "Grażynka patch ${GITHUB_RUN_ID}"
@@ -74,6 +95,10 @@ jobs:
 
       - name: Otwórz Pull Request
         uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          BRANCH_NAME: grażynka/patch-${{ github.run_id }}-${{ github.run_attempt }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
