--- a/.github/workflows/apply-patch.yml
+++ b/.github/workflows/apply-patch.yml
@@ -4,8 +4,12 @@ on:
   workflow_dispatch:
     inputs:
       patch:
-        description: "Wklej unified diff (diff --git / --- / +++)"
-        required: true
+        description: "Unified diff (opcjonalnie). Lepiej użyj patch_b64 poniżej."
+        required: false
+        type: string
+      patch_b64:
+        description: "Base64 tego samego diffu (najpewniejsze)."
+        required: false
         type: string
 
 permissions:
@@ -26,17 +30,25 @@ jobs:
           git config user.name "grazynka-bot"
           git config user.email "bot@example.local"
 
-      - name: Zapisz patch (heredoc — bez psucia)
+      - name: Złóż patch.diff
         shell: bash
         run: |
-          set -e
-          cat > patch.diff <<'PATCH'
-          ${{ github.event.inputs.patch }}
-          PATCH
+          set -euo pipefail
+          if [ -n "${{ github.event.inputs.patch_b64 }}" ]; then
+            echo "Tryb: base64"
+            echo "${{ github.event.inputs.patch_b64 }}" | base64 -d > patch.diff
+          elif [ -n "${{ github.event.inputs.patch }}" ]; then
+            echo "Tryb: RAW"
+            cat > patch.diff <<'PATCH'
+${{ github.event.inputs.patch }}
+PATCH
+          else
+            echo "Nie podano patch ani patch_b64"; exit 1;
+          fi
           echo "Patch bytes: $(wc -c < patch.diff)"
           echo "Patch head:"
           sed -n '1,12p' patch.diff || true
-          grep -Eq '^(diff --git|--- |\+\+\+ )' patch.diff || { echo "To nie wygląda na unified diff."; exit 1; }
+          grep -Eq '^(diff --git|--- |\+\+\+ )' patch.diff || { echo "To nie wygląda na unified diff"; exit 1; }
 
       - name: Utwórz gałąź i nałóż patch
         shell: bash
@@ -47,19 +59,14 @@ jobs:
           git switch -C "$BR"
           git apply --3way --whitespace=nowarn patch.diff || git apply --reject --whitespace=nowarn patch.diff
           if compgen -G "**/*.rej" > /dev/null; then
-            echo "Konflikty (*.rej):"
-            find . -name '*.rej' -print
-            exit 1
+            echo "Konflikty (*.rej):"; find . -name '*.rej' -print; exit 1;
           fi
 
       - name: Commit & push
         shell: bash
         run: |
           git add -A
-          if git diff --staged --quiet; then
-            echo "Nothing to commit — patch nic nie zmienił (albo już był)."
-            exit 1
-          fi
+          if git diff --staged --quiet; then echo "Nothing to commit"; exit 1; fi
           git commit -m "Apply patch $GITHUB_RUN_ID"
           git push -u origin "$BRANCH"
 
