--- a/.github/workflows/apply-patch.yml
+++ b/.github/workflows/apply-patch.yml
@@ -1,14 +1,11 @@
 name: Apply Patch
+
 on:
   workflow_dispatch:
     inputs:
-      patch:
-        description: "Unified diff (opcjonalnie). Lepiej użyj patch_b64 poniżej."
-        required: false
-        type: string
       patch_b64:
-        description: "Base64 tego samego diffu (najpewniejsze)."
-        required: false
+        description: "Base64-encoded unified diff (diff --git / --- / +++)"
+        required: true
         type: string
 
 permissions:
@@ -19,37 +16,27 @@ jobs:
   apply:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout (pełna historia)
+      - name: Checkout (full history)
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Konfiguruj Git
+      - name: Configure Git
         run: |
           git config user.name "grazynka-bot"
           git config user.email "bot@example.local"
 
-      - name: Złóż patch.diff
+      - name: Decode patch
         shell: bash
         run: |
           set -euo pipefail
-          if [ -n "${{ github.event.inputs.patch_b64 }}" ]; then
-            echo "Tryb: base64"
-            echo "${{ github.event.inputs.patch_b64 }}" | base64 -d > patch.diff
-          elif [ -n "${{ github.event.inputs.patch }}" ]; then
-            echo "Tryb: RAW"
-            cat > patch.diff <<'PATCH'
-${{ github.event.inputs.patch }}
-PATCH
-          else
-            echo "Nie podano patch ani patch_b64"; exit 1;
-          fi
+          printf '%s' "${{ github.event.inputs.patch_b64 }}" | base64 -d > patch.diff
           echo "Patch bytes: $(wc -c < patch.diff)"
           echo "Patch head:"
           sed -n '1,12p' patch.diff || true
-          grep -Eq '^(diff --git|--- |\+\+\+ )' patch.diff || { echo "To nie wygląda na unified diff"; exit 1; }
+          grep -Eq '^(diff --git|--- |\+\+\+ )' patch.diff || { echo "Not a unified diff"; exit 1; }
 
-      - name: Utwórz gałąź i nałóż patch
+      - name: Create branch and apply
         shell: bash
         run: |
           set -euxo pipefail
@@ -58,18 +45,14 @@ PATCH
           git switch -C "$BR"
           git apply --3way --whitespace=nowarn patch.diff || git apply --reject --whitespace=nowarn patch.diff
           if compgen -G "**/*.rej" > /dev/null; then
-            echo "Konflikty (*.rej):"; find . -name '*.rej' -print; exit 1;
+            echo "Conflicts (*.rej):"; find . -name '*.rej' -print; exit 1;
           fi
-
-      - name: Commit & push
-        shell: bash
-        run: |
           git add -A
           if git diff --staged --quiet; then echo "Nothing to commit"; exit 1; fi
           git commit -m "Apply patch $GITHUB_RUN_ID"
           git push -u origin "$BRANCH"
 
-      - name: Otwórz Pull Request
+      - name: Open Pull Request
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
