--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,12 @@
-* text=auto eol=lf
+* text=auto
+# PowerShell and batch: keep CRLF
+*.ps1 text eol=crlf
+*.bat text eol=crlf
+# Shell/YAML/JS/TS/React: LF
+*.sh  text eol=lf
+*.yml text eol=lf
+*.yaml text eol=lf
+*.js  text eol=lf
+*.ts  text eol=lf
+*.jsx text eol=lf
+*.tsx text eol=lf
