--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -12,7 +12,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20   # USUWAMY cache: npm
+          node-version: 20
 
       - name: Install deps
         run: npm install --no-audit --no-fund
