--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -1,4 +1,4 @@
-name: CI Smoke Build
+name: CI Smoke Build  # GRAZYNKA CI v1 (no cache, no lockfile)
 
 on:
   pull_request:
@@ -12,11 +12,10 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-          cache: npm          # ← teraz już OK, bo mamy package-lock.json
+          node-version: 20   # ← bez "cache: npm"
 
       - name: Install deps
-        run: npm ci
+        run: npm install --no-audit --no-fund
 
       - name: Build
         run: npm run build
