--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -1,18 +1,30 @@
-name: CI Smoke Build  # GRAZYNKA CI v1 (no cache, no lockfile)
+name: CI Smoke Build
 
 on:
   pull_request:
-    branches: [ "main" ]
+  push:
+    branches: [ main ]
+
+permissions:
+  contents: read
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          node-version: 20    # ← bez "cache: npm"
+          node-version: '20'
+          # UWAGA: bez cache, żeby nie wymagał lockfile'a
+          # cache: 'npm'
+
       - name: Install deps
-        run: npm install --no-audit --no-fund
+        run: |
+          npm ci || npm install --no-audit --no-fund
+
       - name: Build
         run: npm run build
